<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <!-- Main Activity -->
        <RelativeLayout
            android:id="@+id/activity_main_content_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:clipToPadding="false" />


        <!-- here is the content -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/navigation_layout"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/navigation_recycler_view"
                android:layout_width="350dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>