...
                android:layout_marginStart="5dp"
                tools:text="1 day ago" />

        </LinearLayout>

        <TextView
            android:id="@+id/title_text_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="24sp"
            tools:text="The Boys need love too" />

...
